[f4409371fae622a23f92439a8933dcc4bd612b81]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -121,7 +121,7 @@
 
 <p>Para acesso a APIs é necessário abrir um chamado via <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000330511">Zendesk</a></p>
 
-<p>** Nota: Futuramente a geração de credenciais será feita via portal do desenvolvedor.**</p>
+<p><strong>Nota: Futuramente a geração de credenciais será feita via portal do desenvolvedor.</strong></p>
 
 <h1 id="macro-fluxo-de-integração">Macro fluxo de integração</h1>
 
@@ -481,7 +481,7 @@ MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAmeiLngFr9h0npwe6D3ArSi10ZgdOCUCsUYT1
 
 <h1 id="como-obter-o-pos-de-homologação">Como obter o POS de homologação.</h1>
 
-<p>Para a obtenção do POS de homologação deve-se abrir chamado via <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000324432">Zendesk</a></p>
+<p>Para a obtenção do POS de homologação deve-se abrir chamado via <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000324432">Zendesk</a>.</p>
 
 <h1 id="ambientes">Ambientes</h1>
 
@@ -517,11 +517,11 @@ R: Identificador único de cada dispositivo. Segue IOS: https://developer.apple.
 
 <h1 id="canal-de-suporte-a-dúvidas">Canal de Suporte a Dúvidas</h1>
 
-<p>Caso ainda tenha dúvidas deve-se abrir um chamado via <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000316152">Zendesk</a></p>
+<p>Caso ainda tenha dúvidas deve-se abrir um chamado via <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000316152">Zendesk</a>.</p>
 
 <h1 id="para-erros-ou-problemas">Para Erros ou Problemas</h1>
 
-<p>Utilize o canal <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000316172">Zendesk</a></p>
+<p>Utilize o canal <a href="https://devcielo.zendesk.com/hc/pt-br/requests/new?ticket_form_id=360000316172">Zendesk</a>.</p>
 
 </div>
 
