--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -8825,6 +8825,8 @@ JavaScript</p>
 
 <h1 id="velocity">Velocity</h1>
 
+<h2 id="o-que-É-velocity">O Que É Velocity</h2>
+
 <p>O Velocity é um tipo de mecanismo de prevenção à tentativas de fraude, que analisa especificamente o conceito de <strong>“velocidade X dados transacionais”</strong>. Ela analisa a frequência que determinados dados são utilizados e se esse dados estão inscritos em uma lista de comportamentos passiveis de ações de segurança.</p>
 
 <p>Para estabelecimentos comerciais que atuam no mercado de comércio eletrônico e eventualmente recebem transações fraudulentas, o Velocity é um produto que identificará os comportamentos suspeitos de fraude. A ferramenta tem o intuito de auxiliar na análise de fraude por um custo bem menor que uma ferramenta mais tradicional de mercado.</p>
