[76d9767736c20f4efbd8e83da9020b97dcbb0c59]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -4704,7 +4704,7 @@ Below we specify any existing differences:</p>
   </tbody>
 </table>
 
-<h2 id="sandbox-and-tools-1">Sandbox and tools</h2>
+<h2 id="sandbox-and-tools-for-qr-code">Sandbox and tools for QR Code</h2>
 
 <h3 id="about-sandbox-1">About Sandbox</h3>
 
