--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -499,7 +499,14 @@
     <tr>
       <td>bpmpi_auth</td>
       <td>Booleano que indica se a transação é submetida o não para o processo de autenticação</td>
-      <td>Booleanotrue – submeter à autenticaçãofalse – não submeter à autenticação</td>
+      <td>Booleano: <br />true – submeter à autenticação; <br />false – não submeter à autenticação</td>
+      <td>Sim</td>
+      <td>Sim</td>
+    </tr>
+    <tr>
+      <td>bpmpi_auth_notifyonly</td>
+      <td>Booleano que indica se a transação com cartão será submetida no modo “somente notificação”. Neste modo, o processo de autenticação não será acionado, porém, os dados serão submetidos à bandeira. <strong>VÁLIDO SOMENTE PARA CARTÕES MASTERCARD</strong></td>
+      <td>Booleano: <br />true – modo somente notificação; <br />false – modo com autenticação</td>
       <td>Sim</td>
       <td>Sim</td>
     </tr>
