[07731533dc83c9ef9777a89377323d638dd427af]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13606,49 +13606,49 @@ Todas essas etapas exigem que transações sejam realizadas para obter acesso a 
       <td>Define o tipo de cartão utilizados:<br /><em>CreditCard</em><br /><em>DebitCard</em><br />Se não enviado, CreditCard como default</td>
       <td>Texto</td>
       <td>255</td>
-      <td style="text-align: center">Não</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CardNumber</code></td>
       <td>Número do Cartão do Comprador</td>
       <td>Texto</td>
       <td>16</td>
-      <td style="text-align: center">sim</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Holder</code></td>
       <td>Nome do Comprador impresso no cartão.</td>
       <td>Texto</td>
       <td>25</td>
-      <td style="text-align: center">não</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ExpirationDate</code></td>
       <td>Data de e validade impresso no cartão.</td>
       <td>Texto</td>
       <td>7</td>
-      <td style="text-align: center">sim</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">SecurityCode</code></td>
       <td>Código de segurança impresso no verso do cartão.</td>
       <td>Texto</td>
       <td>4</td>
-      <td style="text-align: center">não</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">SaveCard</code></td>
       <td>Booleano que identifica se o cartão será salvo para gerar o CardToken.</td>
       <td>Boolean</td>
       <td>—</td>
-      <td style="text-align: center">Não</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Brand</code></td>
       <td>Bandeira do cartão: <br />Visa<br />Master<br /></td>
       <td>Texto</td>
       <td>10</td>
-      <td style="text-align: center">não</td>
+      <td style="text-align: center">Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CardToken</code></td>
