[ff89eb927e2885ec20a6167775e72486531b6a39]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -12353,7 +12353,7 @@ The following data will be returned about the card:</p>
       <td>Defines the type of card used: <br /> <br /> <em>CreditCard</em> <br /> <em>DebitCard</em> <br /> <br /> If not sent, CreditCard as default</td>
       <td>Text</td>
       <td>255</td>
-      <td>No</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CardNumber</code></td>
@@ -12367,35 +12367,35 @@ The following data will be returned about the card:</p>
       <td>Buyer’s name, printed on the card.</td>
       <td>Text</td>
       <td>25</td>
-      <td>No</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ExpirationDate</code></td>
       <td>Expiration date.</td>
       <td>Text</td>
       <td>7</td>
-      <td>yes</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">SecurityCode</code></td>
       <td>Card Security code .</td>
       <td>Text</td>
       <td>4</td>
-      <td>No</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">SaveCard</code></td>
       <td>Defines if the card must be tokenized</td>
       <td>Boolean</td>
       <td>—</td>
-      <td>No</td>
+      <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Brand</code></td>
       <td>Card Brand: Visa <br /> Master <br /> ELO</td>
       <td>Text</td>
       <td>10</td>
-      <td>No</td>
+      <td>Yes</td>
     </tr>
   </tbody>
 </table>
