--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <header class="logo">
     <div class="home-header-container">
         <div class="help-lang">
-            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte" class="help">{% t global.support %}</a>
+            <a href="https://devcielo.zendesk.com/hc/pt-br#suporte" class="help">{% t global.support %}</a>
         <div class="lang">
             <span>{% t global.languages %}</span>
 
@@ -21,7 +21,7 @@ title: Home
             {% endfor %}
         </div>
         </div>
-        <a href="{{ site.baseurl }}/">
+        <a href="https://desenvolvedores.cielo.com.br">
             <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}">
         </a>
     </div>
