[8e59b54704e5b9d956ef86dd7253553763502887]: Update index.html

--- a/en/index.html
+++ b/en/index.html
@@ -43,7 +43,7 @@
         <header class="logo">
     <div class="home-header-container">
         <div class="help-lang">
-            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte" class="help">Help</a>
+            <a href="https://devcielo.zendesk.com/hc/pt-br#suporte" class="help">Help</a>
         <div class="lang">
             <span>Languages</span>
 
@@ -64,7 +64,7 @@
             
         </div>
         </div>
-        <a href="https://developercielo.github.io/en/">
+        <a href="https://desenvolvedores.cielo.com.br">
             <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
         </a>
     </div>
