--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Home
             {% endfor %}
         </div>
         </div>
-        <a href="https://desenvolvedores.cielo.com.br">
+        <a href="https://desenvolvedores.cielo.com.br" target="_blank">
             <img src="{{ site.baseurl }}/assets/images/logo.png" alt="{{ site.title }}">
         </a>
     </div>
