[20307a5f23718adc7c0a5ac646d375793e15e9f7]: Update index.html

--- a/en/index.html
+++ b/en/index.html
@@ -64,7 +64,7 @@
             
         </div>
         </div>
-        <a href="https://desenvolvedores.cielo.com.br">
+        <a href="https://desenvolvedores.cielo.com.br" target="_blank">
             <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
         </a>
     </div>
