[2f23bea45974ec46033d2c23adba1f180ee83d70]: Update pt.yml

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -4151,7 +4151,7 @@ Com os dados inclusos na tela, o comprador pode finalizar a transação</p>
 
     <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
         <h2>Precisa de ajuda?</h2>
-        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">entre em contato conosco</a>.</p>
+        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://devcielo.zendesk.com/hc/pt-br#suporte">entre em contato conosco</a>.</p>
     </div>
 </div>
 
