--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -764,7 +764,7 @@ Desta forma, é necessário “chamar” o e-Commerce 3.0 para autorizar a trans
 
     <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
         <h2>Precisa de ajuda?</h2>
-        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">entre em contato conosco</a>.</p>
+        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://devcielo.zendesk.com/hc/pt-br#suporte">entre em contato conosco</a>.</p>
     </div>
 </div>
 
