--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -18469,7 +18469,7 @@ Se esse código for exibido, a requisição contem erros (EX: tamanho/condiçõe
 
     <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
         <h2>Precisa de ajuda?</h2>
-        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/content/suporte">entre em contato conosco</a>.</p>
+        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://devcielo.zendesk.com/hc/pt-br#suporte">entre em contato conosco</a>.</p>
     </div>
 </div>
 
