[059e136adab69884263bc64507f34d5fa8be48b1]: Update sidebar.html

--- a/en/manual/promotions.html
+++ b/en/manual/promotions.html
@@ -2259,7 +2259,7 @@
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
