--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -1406,7 +1406,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
