--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -545,7 +545,7 @@ R: Identificador único de cada dispositivo. Segue IOS: https://developer.apple.
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
