--- a/tutorial/artigos.html
+++ b/tutorial/artigos.html
@@ -668,7 +668,7 @@ Por fim, vamos acessar o IP da nossa aplicação para ver se deu tudo certo!</p>
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
