--- a/en/faq/faq-cielo-lio.html
+++ b/en/faq/faq-cielo-lio.html
@@ -345,7 +345,7 @@ In case you decide for Public App on Cielo Store, you’ll be able to upload you
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
