--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -3283,7 +3283,7 @@ If there is a recurrence node in the technical contract, the <code class="highli
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
