--- a/en/manual/cielo-lio.html
+++ b/en/manual/cielo-lio.html
@@ -4118,7 +4118,7 @@ Click on the Apps tab -&gt; Click on the Cielo Store app  -&gt; Choose the app t
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
