--- a/en/manual/controletransacional4.html
+++ b/en/manual/controletransacional4.html
@@ -1515,7 +1515,7 @@ The response will have the <code class="highlighter-rouge">Checkout_Cielo_Order_
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
