--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -1482,7 +1482,7 @@ This procedure is also valid for merchants that performed authentication outside
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
