--- a/en/tutorial/checkout-tutoriais.html
+++ b/en/tutorial/checkout-tutoriais.html
@@ -840,7 +840,7 @@ This kind of integration is is performed via the register of a set of items to b
       <a title="Toggle left column" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/en/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/en/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
