--- a/faq/checkout-faq.html
+++ b/faq/checkout-faq.html
@@ -341,7 +341,7 @@ Se o comprador abandonar a tela do banco, falhando no processo de autenticação
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
