--- a/faq/faq-cielo-lio.html
+++ b/faq/faq-cielo-lio.html
@@ -345,7 +345,7 @@ Caso decida por Aplicativo Público na Cielo Store, você já consegue fazer o u
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
