--- a/manual/controletransacional4.html
+++ b/manual/controletransacional4.html
@@ -1511,7 +1511,7 @@ O response possuirá o <code class="highlighter-rouge">Checkout_Cielo_Order_Numb
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
