--- a/manual/prevencao-fraudes.html
+++ b/manual/prevencao-fraudes.html
@@ -335,7 +335,7 @@ Com base nestas regras o estabelecimento, caso tenha interesse em iniciar uma di
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
