--- a/tutorial/habilitacao-meios-de-pagamento.html
+++ b/tutorial/habilitacao-meios-de-pagamento.html
@@ -365,7 +365,7 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
