--- a/tutorial/manual-boleto.html
+++ b/tutorial/manual-boleto.html
@@ -525,7 +525,7 @@ O formulário a seguir deve ser preenchido e entregue ao gerente.</p>
       <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
-      <a href="https://developercielo.github.io/">
+      <a href="https://desenvolvedores.cielo.com.br" target="_blank">
         <img src="https://developercielo.github.io/assets/images/logo.png" alt="Documentações e tutoriais">
       </a>
       <div></div>
