[a283e8aff20ce9fd013a78e158dcf8f476342b97]: Update cielo.html

--- a/en/faq/checkout-faq.html
+++ b/en/faq/checkout-faq.html
@@ -46,7 +46,7 @@
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
                         <div class="submenu-itens">
-                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">Help</a>
+                            <a href="https://devcielo.zendesk.com/hc/pt-br#suporte" class="help">Help</a>
 
                             
                         </div>
