--- a/en/tutorial/postman.html
+++ b/en/tutorial/postman.html
@@ -46,7 +46,7 @@
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
                         <div class="submenu-itens">
-                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">Help</a>
+                            <a href="https://devcielo.zendesk.com/hc/pt-br#suporte" class="help">Help</a>
 
                             
                         </div>
