--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -1200,7 +1200,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
      </span><span class="s2">"Authenticate"</span><span class="p">:</span><span class="kc">true</span><span class="p">,</span><span class="w">
      </span><span class="s2">"ReturnUrl"</span><span class="p">:</span><span class="s2">"http://www.loja.com.br"</span><span class="p">,</span><span class="w">
      </span><span class="s2">"CreditCard"</span><span class="p">:{</span><span class="w">  
-         </span><span class="s2">"CardNumber"</span><span class="p">:</span><span class="s2">"4551870000000183"</span><span class="p">,</span><span class="w">
+         </span><span class="s2">"CardNumber"</span><span class="p">:</span><span class="s2">"4000000000001000"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"Holder"</span><span class="p">:</span><span class="s2">"Nome do Portador"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"ExpirationDate"</span><span class="p">:</span><span class="s2">"12/2021"</span><span class="p">,</span><span class="w">
          </span><span class="s2">"SecurityCode"</span><span class="p">:</span><span class="s2">"123"</span><span class="p">,</span><span class="w">
@@ -1237,7 +1237,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
      <span class="s2">"Authenticate"</span>:true,
      <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.loja.com.br"</span>,
      <span class="s2">"CreditCard"</span>:<span class="o">{</span>  
-         <span class="s2">"CardNumber"</span>:<span class="s2">"4551870000000183"</span>,
+         <span class="s2">"CardNumber"</span>:<span class="s2">"4000000000001000"</span>,
          <span class="s2">"Holder"</span>:<span class="s2">"Nome do Portador"</span>,
          <span class="s2">"ExpirationDate"</span>:<span class="s2">"12/2021"</span>,
          <span class="s2">"SecurityCode"</span>:<span class="s2">"123"</span>,
@@ -1383,6 +1383,57 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
 <h3 id="response-2">Response</h3>
 
 <p>Vide https://developercielo.github.io/manual/webservice-1-5#tipos-de-retorno</p>
+
+<h2 id="cartões-de-teste">Cartões de Teste</h2>
+
+<p>Utilize os cartões de <strong>teste</strong> abaixo para simular diversos cenários no ambiente de <strong>SANDBOX</strong></p>
+
+<table>
+  <tbody>
+    <tr>
+      <td><strong>Cartão</strong></td>
+      <td><strong>Resultado</strong></td>
+      <td><strong>ECI</strong></td>
+      <td><strong>Descrição</strong></td>
+    </tr>
+    <tr>
+      <td>4000000000001000</td>
+      <td>SUCCESS</td>
+      <td>05</td>
+      <td>Autenticação Silenciosa e portador autenticou com sucesso</td>
+    </tr>
+    <tr>
+      <td>4000000000001018</td>
+      <td>FAILURE</td>
+      <td>07</td>
+      <td>Autenticação Silenciosa e portador finalizou com falha</td>
+    </tr>
+    <tr>
+      <td>4000000000001034</td>
+      <td>UNENROLLED</td>
+      <td>07</td>
+      <td>Cartão não elegível para autenticação</td>
+    </tr>
+    <tr>
+      <td>4000000000001091</td>
+      <td>SUCCESS</td>
+      <td>05</td>
+      <td>Autenticação com desafio e Senha Correta</td>
+    </tr>
+    <tr>
+      <td>4000000000001117</td>
+      <td>UNENROLLED</td>
+      <td>07</td>
+      <td>Autenticação com desafio e Cartão não elegível</td>
+    </tr>
+    <tr>
+      <td>4000000000001109</td>
+      <td>FAILURE</td>
+      <td>07</td>
+      <td>Autenticação com desafio e portador autenticou com sucesso</td>
+    </tr>
+  </tbody>
+</table>
 
 </div>
 
