[03d67b177bcb6efa7284c3cfeb592ae592dcd960]: Merge pull request #139 from DeveloperCielo/tsaitobraspag-patch-76
Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -1418,7 +1418,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
       <td>4000000000001091</td>
       <td>SUCCESS</td>
       <td>05</td>
-      <td>Autenticação com desafio e Senha Correta</td>
+      <td>Autenticação com desafio e portador autenticou com sucesso</td>
     </tr>
     <tr>
       <td>4000000000001117</td>
@@ -1430,7 +1430,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
       <td>4000000000001109</td>
       <td>FAILURE</td>
       <td>07</td>
-      <td>Autenticação com desafio e portador autenticou com sucesso</td>
+      <td>Autenticação com desafio e portador falhou na autenticação</td>
     </tr>
   </tbody>
 </table>
