--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -148,7 +148,7 @@
 
 <h2 id="quem-pode-usar-o-3ds-20">Quem pode usar o 3DS 2.0?</h2>
 
-<p>Todos os estabelecimentos eCommerce devem se adequar à solução a partir de Abril de 2019 frente ao mandate de bandeira que exige autenticação em todas as transações digitais, sejam de débito, crédito ou pré-pago. Aos segmentos que possuem alto índice de chargeback/fraude, a solução tende a ser ainda mais vantajosa frente ao benefício de passar o liability shift ao banco emissor.</p>
+<p>Todos os estabelecimentos eCommerce devem se adequar à solução a partir de Maio de 2019 frente ao mandate de bandeira que exige autenticação em todas as transações digitais, sejam de débito, crédito ou pré-pago. Aos segmentos que possuem alto índice de chargeback/fraude, a solução tende a ser ainda mais vantajosa frente ao benefício de passar o liability shift ao banco emissor.</p>
 
 <h2 id="quais-são-requisitos-para-a-utilização-do-3ds-20">Quais são requisitos para a utilização do 3DS 2.0?</h2>
 
@@ -161,6 +161,16 @@
 </ul>
 
 <aside class="notice">Caso tenha implementado mecanismo de autenticação fora da Cielo (MPI Externo), pule direto para "Etapa de Autorização"</aside>
+
+<h2 id="o-que-é-o-data-only--somente-notificação">O que é o Data Only – Somente Notificação</h2>
+
+<p>O Data Only é um campo opcional ao lojista que poderá ser utilizado exclusivamente para cartões Mastercard.</p>
+
+<p>Para utilizá-lo, deverá ser parametrizado o campo <strong>bpmpi_auth_notifyonly</strong> descrito no item <a href="https://developercielo.github.io/manual/emv3ds#etapa-de-autentica%C3%A7%C3%A3o-passo-3-mapeamento-de-classes"><strong>Etapa de Autenticação – passo 3 – Mapeamento de classes</strong></a>. No modelo Data Only, os campos adicionais do 3DS 2.0 são mapeados da mesma forma, e enviados para a Mastercard e Bancos Emissores, porém, sem solicitar a autenticação.</p>
+
+<p>O benefício do uso do Data Only é enriquecer o banco de dados dos Bancos Emissores e da Mastercard, que passará a receber mais informações sobre os portadores de cada lojista. Esse campo busca aprimorar a autenticação silenciosa e o índice de aprovação dos Emissores, considerando o contexto atual onde o mercado está evoluindo para a integração com o novo protocolo de autenticação 2.0. Além disso, a partir de Maio de 2019, a bandeira Mastercard cobrará um <em>fee</em> adicional por transação não autenticada e o Data Only isenta o valor do <em>fee</em> cobrado.</p>
+
+<p>Vale destacar que nesse modelo, visto que não há autenticação do Emissor, o risco de chargeback por fraude permanece com o lojista.</p>
 
 <h2 id="fluxo-de-pagamento-3ds-20--com-desafio">Fluxo de Pagamento 3DS 2.0 | Com desafio</h2>
 
