[1b2d5b44911f4591116a57162c1fcf208ddeea8a]: Update 2003-03-03-cielo-ecommerce.md
et

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2568,17 +2568,31 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
 <span class="nt">--header</span> <span class="s2">"RequestId: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"</span>
 <span class="nt">--data-binary</span>
 <span class="o">{</span>  
-    <span class="s2">"MerchantOrderId"</span>:<span class="s2">"2014111706"</span>,
+    <span class="s2">"MerchantOrderId"</span>:<span class="s2">"2017051109"</span>,
     <span class="s2">"Customer"</span>:
     <span class="o">{</span>  
-        <span class="s2">"Name"</span>:<span class="s2">"Comprador Transferência Eletronica"</span>
-    <span class="o">}</span>,
+        <span class="s2">"Name"</span>:<span class="s2">"Nome do Comprador"</span>,
+        <span class="s2">"Identity"</span>: <span class="s2">"12345678909"</span>,
+        <span class="s2">"IdentityType"</span>: <span class="s2">"CPF"</span>,
+        <span class="s2">"Email"</span>: <span class="s2">"comprador@braspag.com.br"</span>,
+        <span class="s2">"Address"</span>:
+        <span class="o">{</span>
+             <span class="s2">"Street"</span>:<span class="s2">"Alameda Xingu"</span>,
+             <span class="s2">"Number"</span>:<span class="s2">"512"</span>,
+             <span class="s2">"Complement"</span>:<span class="s2">"27 andar"</span>,
+             <span class="s2">"ZipCode"</span>:<span class="s2">"12345987"</span>,
+             <span class="s2">"City"</span>:<span class="s2">"São Paulo"</span>,
+             <span class="s2">"State"</span>:<span class="s2">"SP"</span>,
+             <span class="s2">"Country"</span>:<span class="s2">"BRA"</span>,
+             <span class="s2">"District"</span>:<span class="s2">"Alphaville"</span>
+         <span class="o">}</span>
+  <span class="o">}</span>,
     <span class="s2">"Payment"</span>:
     <span class="o">{</span>  
+        <span class="s2">"Provider"</span>:<span class="s2">"Bradesco2"</span>,
         <span class="s2">"Type"</span>:<span class="s2">"EletronicTransfer"</span>,
-        <span class="s2">"Amount"</span>:15700,
-        <span class="s2">"Provider"</span>:<span class="s2">"Bradesco"</span>,
-        <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.cielo.com.br"</span>
+        <span class="s2">"Amount"</span>:10000,
+        <span class="s2">"ReturnUrl"</span>:<span class="s2">"http://www.braspag.com.br"</span>
     <span class="o">}</span>
 <span class="o">}</span>
 <span class="nt">--verbose</span>
